--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <header>
   <div class="logo-container">
     <a href="index.html">
-      <img src="podklady/logo olomoucké karate.png" alt="Logo Olomoucké karate">
+      <img src="logo olomoucké karate.png" alt="Logo Olomoucké karate">
     </a>
     <div class="text">
       <h1>Olomoucký svaz karate z.s.</h1>
@@ -98,13 +98,13 @@
         <h2>O nás</h2>
         <p>Olomoucký svaz karate z.s. vznikl v roce 2015 a združuje kluby karate v Olomouckém kraji, které rovněž spadají pod Český svaz karate.</p>
         <h3> Předseda svazu je PaedDr. Michal Hrubý PhD</h3>
-        <img src="podklady/michal-hruby.avif" alt="PaedDr. Michal Hrubý PhD" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
+        <img src="michal-hruby.avif" alt="PaedDr. Michal Hrubý PhD" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
         <h3> Trenérsko-metodickou komisy OSKe vede Miroslav Sobek</h3>
-        <img src="podklady/miro-sobek.jpg" alt="Miroslav Sobek" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
+        <img src="miro-sobek.jpg" alt="Miroslav Sobek" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
         <h3>Komisy rozhodčích OSKe zaštiťuje Svatopluk Sekanina</h3>
-        <img src="podklady/svata-sekanina.jpg" alt="Svatopluk Sekanina" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
+        <img src="svata-sekanina.jpg" alt="Svatopluk Sekanina" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
         <h3>Sportovně-technickou komisy OSKe má na starosti Katarína Dopitová Sámelová</h3>
-        <img src="podklady/ja.jpg" alt="Katarína Dopitová Sámelová" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
+        <img src="ja.jpg" alt="Katarína Dopitová Sámelová" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
     </section>
 
     <section id="kluby" style="display: none;">
@@ -153,27 +153,27 @@
 
        <div class="partner-logos">
        <a href="https://www.olomoucky-kraj.cz" target="_blank" rel="noopener noreferrer">
-          <img src="podklady/logo olomoucký kraj.jpg" alt="Logo Olomoucký kraj">
+          <img src="logo olomoucký kraj.jpg" alt="Logo Olomoucký kraj">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
-          <img src="podklady/logo nsa.png" alt="Logo NSA">
+          <img src="logo nsa.png" alt="Logo NSA">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
-          <img src="podklady/logo Olomouc.jpg" alt="Logo města Olomouc">
+          <img src="logo Olomouc.jpg" alt="Logo města Olomouc">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
-         <img src="podklady/logo prostějov.gif" alt="Logo města Prostějov">
+         <img src="logo prostějov.gif" alt="Logo města Prostějov">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
-         <img src="podklady/logo-cskgr-web.png" alt="Podporující organizace">
+         <img src="logo-cskgr-web.png" alt="Podporující organizace">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
-         <img src="podklady/logo.jpg" alt="Podporující organizace">
+         <img src="logo.jpg" alt="Podporující organizace">
        </a>
      </div>
     </section>
