--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
         <img src="svata-sekanina.jpg" alt="Svatopluk Sekanina" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
         <h3>Sportovně-technickou komisy OSKe má na starosti Katarína Dopitová Sámelová</h3>
         <img src="ja.jpg" alt="Katarína Dopitová Sámelová" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
+        <h3>Komisi talentované mládeže OSKe vede Martin Blatoň</h3>
+        <img src="martin-blatoň.jpg" alt="Martin Blatoň" style="max-width: 200px; height: auto; display: block; margin-top: 15px;">
     </section>
 
     <section id="kluby" style="display: none;">
@@ -118,6 +120,7 @@
         <li><a href="https://www.karatekarvina.cz" target="_blank">Karate klub Karviná</a></li>
         <li><a href="https://www.tj-prostejov.cz" target="_blank">TJ karate Prostějov</a></li>
         <li><a href="https://www.facebook.com/profile.php?id=100064395231166&locale=pt_PT" target="_blank">Bushi-ryu Karate Do Hranice</a></li>
+        <li><strong>Talentovanou mládež Olomouckého karate zastřešuje Olomoucká sportovní akademie karate.</strong></li>
     </ul>
 </section>
 
@@ -237,4 +240,5 @@
 </script>
 
 </body>
+
 </html>
