--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 
        <div class="partner-logos">
        <a href="https://www.olomoucky-kraj.cz" target="_blank" rel="noopener noreferrer">
-          <img src="logo olomoucký kraj.jpg" alt="Logo Olomoucký kraj">
+          <img src="logo Olomoucký kraj.jpg" alt="Logo Olomoucký kraj">
        </a>
 
        <a href="#" target="_blank" rel="noopener noreferrer">
@@ -242,3 +242,4 @@
 </body>
 
 </html>
+
